Improve ansible and fix bugs

--- a/ProxmoxAnsible/ansible.cfg
+++ b/ProxmoxAnsible/ansible.cfg
@@ -1,5 +1,11 @@
 [defaults]
+inventory = inventory.ini
 force_color = True
-stdout_callback = yaml
+stdout_callback = default
+bin_ansible_callbacks = True
+callbacks_enabled = ansible.posix.timer
 host_key_checking = False
 interpreter_python = auto_silent
+
+[callback_default]
+result_format = yaml
