--- a/ProxmoxAnsible/tasks/env.yml
+++ b/ProxmoxAnsible/tasks/env.yml
@@ -1,12 +1,4 @@
 ---
-- name: Task Banner
-  debug:
-      msg: |
-
-          +-----------------------------------------------------------------------------------------------------------------------------------+
-
-          ● Setting up Environment (Doppler + Local)
-
 - vars:
       doppler_info:
           project: jarvis
@@ -31,31 +23,31 @@
       local_config:
           JARVIS_CONFIGS_DIR: '/root/.jarvis/configs'
           JARVIS_NETWORK_PREFIX: '192.168.68'
-          JARVIS_HOST: '{{ env.JARVIS_NETWORK_PREFIX }}.200'
-          JARVIS_GATEWAY: '{{ env.JARVIS_NETWORK_PREFIX }}.1'
+          JARVIS_GATEWAY: '{{ local_config.JARVIS_NETWORK_PREFIX }}.1'
           JARVIS_DNS_SERVERS: ['8.8.8.8', '8.8.4.4']
           JARVIS_TZ: 'Asia/Kolkata'
           JARVIS_CERT_RESOLVER: 'letsencrypt'
 
   block:
-      - name: Install Doppler (MacOS)
+      - name: Ensure Doppler is Installed
         homebrew:
             name: dopplerhq/cli/doppler
             state: present
-        when: ansible_os_family == 'Darwin'
 
-      - name: Ensure Doppler Project Configured
-        shell: |
-            if ! doppler setup --project {{ doppler_info.project }} --config {{ doppler_info.config }} --no-interactive > /dev/null 2>&1; then
-                echo "Doppler not configured or login expired."
-                echo "Please log in to Doppler to access '{{ doppler_info.project }}' project."
-                yes | doppler login > /dev/null
-            fi
-        register: doppler_setup_result
-        until: doppler_setup_result.rc == 0
-        retries: 5
-        delay: 2
-        changed_when: false
+      - name: Verify and Configure Doppler
+        block:
+            - name: Verify Project
+              command: doppler projects get {{ doppler_info.project }}
+              changed_when: false
+
+            - name: Configure Project
+              command: doppler setup --project {{ doppler_info.project }} --config {{ doppler_info.config }} --no-interactive
+              changed_when: false
+
+        rescue:
+            - name: Doppler Project Access Failed for '{{ doppler_info.project }}'
+              fail:
+                  msg: "Log in with 'doppler login'"
 
       - name: Download Secrets
         command: doppler secrets download --no-file --format json
@@ -69,10 +61,10 @@
         no_log: true
 
       - name: Validate Required Secrets
-        fail:
-            msg: 'Missing required secret: {{ item }}'
-        loop: '{{ doppler_required_secrets }}'
-        when: item not in doppler_secrets
+        assert:
+            that: doppler_required_secrets | difference(doppler_secrets.keys()) | length == 0
+            fail_msg: 'Missing: {{ doppler_required_secrets | difference(doppler_secrets.keys()) | join(", ") }}'
+            success_msg: 'All required secrets are present.'
 
       - name: Construct Global Environment
         set_fact:
