--- a/ProxmoxAnsible/tasks/instances/apps_lxc/cloudflared.yml
+++ b/ProxmoxAnsible/tasks/instances/apps_lxc/cloudflared.yml
@@ -1,15 +1,23 @@
-- name: Create Cloudflared Directory
-  file:
-      path: '{{ paths.host_base }}/cloudflared'
-      state: directory
-      mode: '0755'
+- vars:
+      container_id: cloudflared
 
-- name: Deploy Cloudflared Container
-  community.docker.docker_container:
-      name: cloudflared
-      image: cloudflare/cloudflared:latest
-      restart_policy: unless-stopped
-      command: tunnel run
-      env:
-          TUNNEL_TOKEN: "{{ env.CLOUDFLARED_TOKEN | default('') }}"
-      docker_host: 'tcp://{{ lxc.ip }}:2375'
+  block:
+      - name: Create Cloudflared Directory
+        file:
+            path: '{{ env.JARVIS_CONFIGS_DIR }}/{{ container_id }}'
+            state: directory
+            mode: '0755'
+
+      - name: Deploy Cloudflared Container
+        community.docker.docker_container:
+            name: '{{ container_id }}'
+            image: cloudflare/cloudflared:latest
+            restart_policy: unless-stopped
+            command: tunnel --no-autoupdate run
+            security_opts:
+                - no-new-privileges:true
+            env:
+                TUNNEL_TOKEN: '{{ env.JARVIS_CF_TUNNEL_TOKEN }}'
+            volumes:
+                - '{{ paths.lxc_configs }}/{{ container_id }}:/etc/cloudflared'
+            docker_host: 'tcp://{{ lxc.ip }}:2375'
