--- a/ProxmoxAnsible/requirements.yml
+++ b/ProxmoxAnsible/requirements.yml
@@ -1,4 +1,7 @@
----
 collections:
-    - name: community.general
     - name: community.docker
+      version: 5.0.4
+    - name: ansible.posix
+      version: 2.1.0
+    - name: community.proxmox
+      version: 1.5.0
