--- a/ProxmoxAnsible/tasks/instances/home_vm/index.yml
+++ b/ProxmoxAnsible/tasks/instances/home_vm/index.yml
@@ -1,12 +1,4 @@
 ---
-- name: Task Banner
-  debug:
-      msg: |
-
-          +-----------------------------------------------------------------------------------------------------------------------------------+
-
-          ● Deploying Home Assistant VM
-
 - vars:
       vm:
           id: 252
@@ -19,7 +11,7 @@
           gateway: '{{ env.JARVIS_GATEWAY }}'
   block:
       - name: Collect all VMs
-        community.general.proxmox_kvm_info:
+        community.proxmox.proxmox_kvm_info:
             node: '{{ inventory_hostname }}'
         register: all_vms_info
 
@@ -52,7 +44,7 @@
                   creates: '/var/lib/vz/template/iso/haos_ova-{{ haos_version }}.qcow2'
 
             - name: Create VM
-              community.general.proxmox_kvm:
+              community.proxmox.proxmox_kvm:
                   node: '{{ inventory_hostname }}'
                   vmid: '{{ vm.id }}'
                   name: '{{ vm.name }}'
@@ -85,7 +77,7 @@
               command: 'qm set {{ vm.id }} --scsi0 {{ vm.storage }}:vm-{{ vm.id }}-disk-0,ssd=1,discard=on,size=32G --boot order=scsi0'
 
             - name: Start VM
-              community.general.proxmox_kvm:
+              community.proxmox.proxmox_kvm:
                   node: '{{ inventory_hostname }}'
                   vmid: '{{ vm.id }}'
                   state: started
