--- a/ProxmoxAnsible/tasks/system/update.yml
+++ b/ProxmoxAnsible/tasks/system/update.yml
@@ -1,27 +1,30 @@
 ---
-- name: Task Banner
+- name: System Update Started
   debug:
-      msg: |
+      msg: 'Starting system update and upgrade process...'
 
-          +-----------------------------------------------------------------------------------------------------------------------------------+
-
-          ● Updating System
-
-- name: Update & Upgrade System
+- name: Update Apt Cache
   apt:
       update_cache: yes
       cache_valid_time: 3600
+  become: true
+  register: apt_update_result
+
+- name: Upgrade Packages (Dist Upgrade)
+  apt:
       upgrade: dist
+  become: true
+  register: apt_upgrade_result
+  when: apt_update_result is success
+
+- name: Autoremove Unused Packages
+  apt:
       autoremove: yes
       purge: yes
   become: true
+  when: apt_upgrade_result is success
 
-- name: Check if Reboot is Required
-  stat:
-      path: /var/run/reboot-required
-  register: reboot_required
-
-- name: Notify Reboot Requirement
-  debug:
-      msg: 'System requires a reboot to apply kernel updates.'
-  when: reboot_required.stat.exists
+- name: Check Reboot Status
+  shell: "[ -f /var/run/reboot-required ] && echo 'System requires a reboot.' || echo 'No reboot required.'"
+  register: reboot_status
+  changed_when: false
