--- a/ProxmoxAnsible/tasks/instances/apps_lxc/qbittorrent.yml
+++ b/ProxmoxAnsible/tasks/instances/apps_lxc/qbittorrent.yml
@@ -1,53 +1,55 @@
-- vars:
+- name: Configure
+  set_fact:
       container_id: qbittorrent
 
-  block:
-      - name: Create qBittorrent Directories
-        file:
-            path: '{{ env.JARVIS_CONFIGS_DIR }}/{{ container_id }}/{{ item }}'
-            state: directory
-            mode: '0755'
-        loop:
-            - config
-            - downloads
-            - vuetorrent
+- name: Create qBittorrent Directories
+  file:
+      path: '{{ env.JARVIS_CONFIGS_DIR }}/{{ container_id }}/{{ qbit_dir }}'
+      state: directory
+      mode: '0755'
+  loop:
+      - config
+      - downloads
+      - vuetorrent
+  loop_control:
+      loop_var: qbit_dir
 
-      - name: Check VueTorrent
-        stat:
-            path: '{{ env.JARVIS_CONFIGS_DIR }}/{{ container_id }}/vuetorrent/index.html'
-        register: vuetorrent_check
+- name: Check VueTorrent
+  stat:
+      path: '{{ env.JARVIS_CONFIGS_DIR }}/{{ container_id }}/vuetorrent/index.html'
+  register: vuetorrent_check
 
-      - name: Download VueTorrent
-        unarchive:
-            src: https://github.com/VueTorrent/VueTorrent/releases/latest/download/vuetorrent.zip
-            dest: '{{ env.JARVIS_CONFIGS_DIR }}/{{ container_id }}/vuetorrent'
-            remote_src: true
-            exclude: ['vuetorrent.zip']
-        when: not vuetorrent_check.stat.exists
+- name: Download VueTorrent
+  unarchive:
+      src: https://github.com/VueTorrent/VueTorrent/releases/latest/download/vuetorrent.zip
+      dest: '{{ env.JARVIS_CONFIGS_DIR }}/{{ container_id }}/vuetorrent'
+      remote_src: true
+      exclude: ['vuetorrent.zip']
+  when: not vuetorrent_check.stat.exists
 
-      - name: Deploy qBittorrent Container
-        community.docker.docker_container:
-            name: '{{ container_id }}'
-            image: linuxserver/qbittorrent:latest
-            restart_policy: unless-stopped
-            env:
-                PUID: '0'
-                PGID: '0'
-                TZ: '{{ env.JARVIS_TZ }}'
-                WEBUI_PORT: '8080'
-                ALTERNATIVE_UI_PATH: /themes/vuetorrent
-            ports:
-                - '6881:6881'
-                - '6881:6881/udp'
-                - '8082:8080'
-            volumes:
-                - '{{ paths.lxc_configs }}/{{ container_id }}/config:/config'
-                - '/media/wdhdd:/downloads'
-                - '{{ paths.lxc_configs }}/{{ container_id }}/vuetorrent:/themes/vuetorrent'
-            labels:
-                traefik.enable: 'true'
-                traefik.http.routers.{{ container_id }}.rule: 'Host(`{{ container_id }}.{{ env.JARVIS_DOMAIN }}`)'
-                traefik.http.routers.{{ container_id }}.entrypoints: 'websecure'
-                traefik.http.routers.{{ container_id }}.tls.certresolver: '{{ env.JARVIS_CERT_RESOLVER }}'
-                traefik.http.services.{{ container_id }}.loadbalancer.server.port: '8080'
-            docker_host: 'tcp://{{ lxc.ip }}:2375'
+- name: Deploy qBittorrent Container
+  community.docker.docker_container:
+      name: '{{ container_id }}'
+      image: linuxserver/qbittorrent:latest
+      restart_policy: unless-stopped
+      env:
+          PUID: '0'
+          PGID: '0'
+          TZ: '{{ env.JARVIS_TZ }}'
+          WEBUI_PORT: '8080'
+          ALTERNATIVE_UI_PATH: /themes/vuetorrent
+      ports:
+          - '6881:6881'
+          - '6881:6881/udp'
+          - '8082:8080'
+      volumes:
+          - '{{ lxc.configs }}/{{ container_id }}/config:/config'
+          - '/media/wdhdd:/downloads'
+          - '{{ lxc.configs }}/{{ container_id }}/vuetorrent:/themes/vuetorrent'
+      labels:
+          traefik.enable: 'true'
+          traefik.http.routers.{{ container_id }}.rule: 'Host(`{{ container_id }}.{{ env.JARVIS_DOMAIN }}`)'
+          traefik.http.routers.{{ container_id }}.entrypoints: 'websecure'
+          traefik.http.routers.{{ container_id }}.tls.certresolver: '{{ env.JARVIS_CERT_RESOLVER }}'
+          traefik.http.services.{{ container_id }}.loadbalancer.server.port: '8080'
+      docker_host: 'tcp://{{ lxc.ip }}:2375'
